# samples

azure/sdk-identity-resources-storage/: AzureIdentityStorageExample.csproj
core/assembly/MetadataLoadContext/: MetadataLoadContextSample.csproj
core/diagnostics/DiagnosticScenarios/: DiagnosticScenarios.csproj
core/profiling/: CMakeLists.txt  build.cmd  build.sh
core/profiling/common/: ClassFactory.cpp  ClassFactory.h  guids.cpp  profiler_pal.h  rpc.h  unknwn.h
core/profiling/eventpipe/: CMakeLists.txt
core/profiling/eventpipe/src/: EventPipeProfiler.cpp  EventPipeProfiler.h  dllmain.cpp  eventpipemetadatareader.h
core/profiling/stacksampling/: CMakeLists.txt
core/profiling/stacksampling/src/: SampleProfiler.cpp  SampleProfiler.h  dllmain.cpp  sampler.cpp
csharp/parallel/ParallelExtensionsExtras/: ParallelExtensionsExtras.csproj
csharp/roslyn-sdk/SemanticQuickStart/: SemanticQuickStart.csproj
csharp/safe-efficient-code/benchmark/: benchmark.csproj
csharp/unit-testing-best-practices/after/: unit-testing-best-practices-after.csproj
csharp/unit-testing-best-practices/before/: unit-testing-best-practices-before.csproj
csharp/unit-testing-code-coverage/XUnit.Coverlet.Collector/: XUnit.Coverlet.Collector.csproj
csharp/unit-testing-code-coverage/XUnit.Coverlet.MSBuild/: XUnit.Coverlet.MSBuild.csproj
csharp/unit-testing/MSTest.Project/: MSTest.Project.csproj
csharp/unit-testing/NUnit.TestProject/: NUnit.Project.csproj
csharp/unit-testing/XUnit.TestProject/: XUnit.Project.csproj
machine-learning/tutorials/MovieRecommendation/: MovieRecommendation.csproj
machine-learning/tutorials/ProductSalesAnomalyDetection/: ProductSalesAnomalyDetection.csproj
machine-learning/tutorials/TaxiFarePrediction/: TaxiFarePrediction.csproj
machine-learning/tutorials/TextClassificationTF/: TextClassificationTF.csproj
machine-learning/tutorials/TransferLearningTF/: TransferLearningTF.csproj
(+34 files in other folders)
